# mixer-lib

./: .gitignore  CMakeLists.txt  README.md
src/: Mixer.cpp
test/: CMakeLists.txt  main.cpp
